<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="3pt"
    android:layout_marginRight="3pt"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4pt"
            android:layout_marginBottom="5pt"
            android:layout_weight="0.25"
            android:text="@string/lbl_x"
            android:textAlignment="textEnd" />

        <EditText
            android:id="@+id/txt_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4pt"
            android:layout_weight="0.25"
            android:text="@string/lbl_y"
            android:textAlignment="textEnd" />

        <EditText
            android:id="@+id/txt_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15pt"
            android:layout_marginBottom="5pt"
            android:layout_weight="1"
            android:text="@string/btn_add" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginTop="15pt"
            android:layout_marginBottom="5pt"
            android:layout_weight="1"
            android:text="@string/btn_sub" />

        <Button
            android:id="@+id/btn_mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginTop="15pt"
            android:layout_marginBottom="5pt"
            android:layout_weight="1"
            android:text="@string/btn_mul" />

        <Button
            android:id="@+id/btn_sqr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginTop="15pt"
            android:layout_marginBottom="5pt"
            android:layout_weight="1"
            android:text="@string/btn_sqr" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:layout_weight="1"
            android:text="@string/btn_div" />

        <Button
            android:id="@+id/btn_div2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginBottom="5pt"
            android:layout_weight="1"
            android:text="@string/btn_div2" />

        <Button
            android:id="@+id/btn_rem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginBottom="5pt"
            android:layout_weight="1"
            android:text="@string/btn_rem" />

        <Button
            android:id="@+id/btn_sqrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_marginBottom="5pt"
            android:layout_weight="1"
            android:text="@string/btn_sqrt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_sin" />

        <Button
            android:id="@+id/btn_cos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_weight="1"
            android:text="@string/btn_cos" />

        <Button
            android:id="@+id/btn_tan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_weight="1"
            android:text="@string/btn_tan" />

        <Switch
            android:id="@+id/swc_rad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2pt"
            android:layout_weight="3.7"
            android:text="@string/swc_rad"
            android:textAlignment="textEnd" />
    </LinearLayout>

</LinearLayout>